<resources>
    <string name="app_github_name" translatable="false">OpenHub</string>
    <string name="navigation_drawer_open" translatable="false">navigation_drawer_open</string>
    <string name="navigation_drawer_close" translatable="false">navigation_drawer_close</string>
    <string name="light_blue" translatable="false">Light Blue</string>
    <string name="blue" translatable="false">Blue</string>
    <string name="indigo" translatable="false">Indigo</string>
    <string name="orange" translatable="false">Orange</string>
    <string name="yellow" translatable="false">Yellow</string>
    <string name="amber" translatable="false">Amber</string>
    <string name="grey" translatable="false">Grey</string>
    <string name="brown" translatable="false">Brown</string>
    <string name="cyan" translatable="false">Cyan</string>
    <string name="teal" translatable="false">Teal</string>
    <string name="lime" translatable="false">Lime</string>
    <string name="green" translatable="false">Green</string>
    <string name="pink" translatable="false">Pink</string>
    <string name="red" translatable="false">Red</string>
    <string name="purple" translatable="false">Purple</string>
    <string name="deep_purple" translatable="false">Deep Purple</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_in_browser">LOGIN WITH BROWSER</string>
    <string name="oauth_tip">For now we only support OAuth login in browser, Because Github will remove the Authorizations API endpoint on November 13, 2020. </string>
    <string name="user_name_warning">Invalid username!</string>
    <string name="password_warning">Invalid password!</string>
    <string name="profile">Profile</string>
    <string name="notifications">Notifications</string>
    <string name="news">News</string>
    <string name="issues">Issues</string>
    <string name="repositories">Repositories</string>
    <string name="owned">Owned</string>
    <string name="starred">Starred</string>
    <string name="trending">Trending</string>
    <string name="explore">Explore</string>
    <string name="info_and_repositories">Info &#038; Preferences</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="public_repositories">Public repositories</string>
    <string name="starred_repositories">Starred repositories</string>
    <string name="no_cache_and_network">Network and cache is unavailable.</string>
    <string name="page_no_found">Page not found.</string>
    <string name="unauthorized">Unauthorized.</string>
    <string name="no_network_tip">Loading data from GitHub failed. Please check your network connection and retry.</string>
    <string name="load_timeout_tip">Loading data from GitHub timed out. Please check your network connection and retry.</string>
    <string name="tap_to_retry">Tap to retry</string>
    <string name="no_data">No data</string>
    <string name="title_activity_repository">OpenHub</string>
    <string name="title_activity_settings">Settings</string>
    <string name="choose_theme">Choose Theme</string>
    <string name="theme_accent_color">Theme Accent Color</string>
    <string name="start_page">Start Page</string>
    <string name="cache_controller">Cache Controller</string>
    <string name="cache_controller_desc">Load cache first if cache available, then load from network</string>
    <string name="use_system_downloader">Use System Downloader</string>
    <string name="use_custom_tabs">Use Custom Tabs</string>
    <string name="custom_tabs_desc">Open in custom tabs instead of outer browser(support chrome, firefox…)</string>
    <string name="use_custom_tabs_tips">If you want to open in outer browser directly, you could change in settings.</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="repository">Repository</string>
    <string name="info">Info</string>
    <string name="files">Files</string>
    <string name="commits">Commits</string>
    <string name="commit">Commit</string>
    <string name="star">Star</string>
    <string name="unstar">Unstar</string>
    <string name="unstarred">Unstarred</string>
    <string name="branch_tip">Branches or tags</string>
    <string name="share">Share</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="copy_url">Copy URL</string>
    <string name="copy_clone_url">Copy clone URL</string>
    <string name="watch">Watch</string>
    <string name="watched">Watched</string>
    <string name="unwatch">Unwatch</string>
    <string name="unwatched">Unwatched</string>
    <string name="fork">Fork</string>
    <string name="fork_tag">Fork</string>
    <string name="forked">Forked</string>
    <string name="forked_from">Forked from</string>
    <string name="wrap_lines">Wrap lines</string>
    <string name="refresh">Refresh</string>
    <string name="success_copied">Copied</string>
    <string name="stargazers">Stargazers</string>
    <string name="forks">Forks</string>
    <string name="watchers">Watchers</string>
    <string name="readme">README</string>
    <string name="no_readme">NO README</string>
    <string name="warning_dialog_tile">Warning</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="ok">OK</string>
    <string name="confirm">OK</string>
    <string name="select_branch">Select branch or tag</string>
    <string name="share_to">Share to</string>
    <string name="no_share_clients">There are no share clients installed.</string>
    <string name="no_browser_clients">There are no browser clients installed.</string>
    <string name="no_download_clients">There are no download clients installed.</string>
    <string name="send_email">Send email</string>
    <string name="open_in_market">Open in market</string>
    <string name="no_email_clients">There are no email clients installed.</string>
    <string name="no_market_clients">There are no market clients installed.</string>
    <string name="url_invalid">Url is invalid</string>
    <string name="view_archive_file_error">Archive file is not supported, please download the file to view its content.</string>
    <string name="fork_warning_msg">Fork this repository?</string>
    <string name="invalid_repo_url">Invalid repository url!</string>
    <string name="invalid_url">Invalid url!</string>
    <string name="follow">Follow</string>
    <string name="followed">Followed</string>
    <string name="unfollow">Unfollow</string>
    <string name="unfollowed">Unfollowed</string>
    <string name="members">Members</string>
    <string name="view">View</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="repos">Repos</string>
    <string name="stars">Stars</string>
    <string name="gists">Gists</string>
    <string name="joined_at">Joined at</string>
    <string name="users">Users</string>
    <string name="activity">Activity</string>
    <string name="just_now">just now</string>
    <string name="seconds_ago">seconds ago</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="days_ago">days ago</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="sort_order">Sort order</string>
    <string name="best_match">Best match</string>
    <string name="most_stars">Most stars</string>
    <string name="fewest_stars">Fewest stars</string>
    <string name="most_forks">Most forks</string>
    <string name="fewest_forks">Fewest forks</string>
    <string name="recently_updated">Recently updated</string>
    <string name="least_recently_updated">Least recently updated</string>
    <string name="most_followers">Most followers</string>
    <string name="fewest_followers">Fewest followers</string>
    <string name="most_recently_joined">Most recently joined</string>
    <string name="least_recently_joined">Least recently joined</string>
    <string name="most_repositories">Most repositories</string>
    <string name="fewest_repositories">Fewest repositories</string>
    <string name="invalid_query">Invalid query text!</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="logout_warning">Confirm to logout?</string>
    <string name="unknown">Unknown</string>
    <string name="organizations">Organizations</string>
    <string name="no_user">No users</string>
    <string name="no_activity">No activities</string>
    <string name="no_repository">No repositories</string>
    <string name="no_file">No files</string>
    <string name="developing">Developing</string>
    <string name="version" >Version</string>
    <string name="source_code" >Source code</string>
    <string name="source_code_wishes" >Star to support me</string>
    <string name="rate_in_market" >Rate or comment in market</string>
    <string name="author" >Author</string>
    <string name="author_name" translatable="false">30度的射线</string>
    <string name="author_location" translatable="false">NanJing,China</string>
    <string name="author_login_id" translatable="false">ThirtyDegreesRay</string>
    <string name="author_avatar_url" translatable="false">https://avatars1.githubusercontent.com/u/9625508?v=4</string>
    <string name="app_copyright" translatable="false">© 2017 ThirtyDegreesRay</string>
    <string name="follow_on_github" >Follow on GitHub</string>
    <string name="email" >Email</string>
    <string name="auth_email_address" translatable="false">rays.yuz@gmail.com</string>
    <string name="loading">loading</string>
    <string name="upgrade">Upgrade</string>
    <string name="install">Install</string>
    <string name="next_time">Next time</string>
    <string name="upgrade_version">Version:</string>
    <string name="upgrade_apk_size">Apk size:</string>
    <string name="publish_time">Publish time:</string>
    <string name="releases">Releases</string>
    <string name="download_source_zip">Download source (zip)</string>
    <string name="download_source_tar">Download source (tar.gz)</string>
    <string name="download">Download</string>
    <string name="type">Type</string>
    <string name="all">All</string>
    <string name="created">Created</string>
    <string name="assigned">Assigned</string>
    <string name="mentioned">Mentioned</string>
    <string name="recently_created">Recently created</string>
    <string name="previously_created">Previously created</string>
    <string name="most_comments">Most comments</string>
    <string name="fewest_comments">Fewest comments</string>
    <string name="add_large_header">Add large header</string>
    <string name="add_medium_header">Add medium header</string>
    <string name="add_small_header">Add small header</string>
    <string name="add_bold_text">Add bold text</string>
    <string name="add_italic_text">Add italic text</string>
    <string name="add_a_link">Add a link</string>
    <string name="insert_code">Insert code</string>
    <string name="insert_a_quote">Insert a quote</string>
    <string name="add_a_bulleted_list">Add a bulleted list</string>
    <string name="mention">Directly mention a user or team</string>
    <string name="view_file">View file</string>
    <string name="owner_repo">Owner</string>
    <string name="public_repo">Public</string>
    <string name="private_repo">Private</string>
    <string name="member_repo">Member</string>
    <string name="most_pushed">Most pushed</string>
    <string name="fewest_pushed">Fewest pushed</string>
    <string name="full_name_asc">Full name asc</string>
    <string name="full_name_desc">Full name desc</string>
    <string name="bookmark">Bookmark</string>
    <string name="fullscreen">Fullscreen</string>
</resources>