<?xml version="1.0" encoding="utf-8"?>
<!--
  ~    Copyright 2017 ThirtyDegreesRay
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_title"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView"/>
    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort_title"
        android:title="@string/sort"
        app:showAsAction="always">
        <menu xmlns:android="http://schemas.android.com/apk/res/android">
            <item
                android:id="@+id/action_bast_match"
                android:title="@string/best_match"/>
            <item
                android:id="@+id/action_most_stars"
                android:title="@string/most_stars"/>
            <item
                android:id="@+id/action_fewest_stars"
                android:title="@string/fewest_stars"/>
            <item
                android:id="@+id/action_most_forks"
                android:title="@string/most_forks"/>
            <item
                android:id="@+id/action_fewest_forks"
                android:title="@string/fewest_forks"/>
            <item
                android:id="@+id/action_recently_updated"
                android:title="@string/recently_updated"/>
            <item
                android:id="@+id/action_least_recently_updated"
                android:title="@string/least_recently_updated"/>


            <item
                android:id="@+id/action_most_followers"
                android:title="@string/most_followers"/>
            <item
                android:id="@+id/action_fewest_followers"
                android:title="@string/fewest_followers"/>
            <item
                android:id="@+id/action_most_recently_joined"
                android:title="@string/most_recently_joined"/>
            <item
                android:id="@+id/action_least_recently_joined"
                android:title="@string/least_recently_joined"/>
            <item
                android:id="@+id/action_most_repositories"
                android:title="@string/most_repositories"/>
            <item
                android:id="@+id/action_fewest_repositories"
                android:title="@string/fewest_repositories"/>

        </menu>
    </item>
    <item
        android:id="@+id/action_info"
        android:icon="@drawable/ic_info_title"
        android:title="@string/info"
        app:showAsAction="always"/>
</menu>