<!--
  ~    Copyright 2017 ThirtyDegreesRay
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.thirtydegreesray.openhub.ui.activity.RepositoryActivity">
    <item
        android:id="@+id/action_star"
        android:title="@string/star"
        android:icon="@drawable/ic_star_title"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_branch"
        android:title="@string/branch_tip"
        android:icon="@drawable/ic_branch_title"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_share"
        android:title="@string/share"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_open_in_browser"
        android:title="@string/open_in_browser"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_copy_url"
        android:title="@string/copy_url"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_copy_clone_url"
        android:title="@string/copy_clone_url"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_watch"
        android:title="@string/watch"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_fork"
        android:title="@string/fork"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_releases"
        android:title="@string/releases"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_download_source_zip"
        android:title="@string/download_source_zip"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_download_source_tar"
        android:title="@string/download_source_tar"
        app:showAsAction="never"/>
</menu>
