<?xml version="1.0" encoding="utf-8"?>


<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
        android:icon="@drawable/ic_color_lens"
        android:title="@string/choose_theme"
        android:key="theme"/>

    <com.thirtydegreesray.openhub.ui.widget.colorChooser.ColorChooserPreference
        android:icon="@drawable/ic_color_lens"
        android:title="@string/theme_accent_color"
        android:key="accentColor"/>

    <SwitchPreference
        android:icon="@drawable/ic_http"
        android:title="@string/cache_controller"
        android:summary="@string/cache_controller_desc"
        android:key="cacheFirstEnable"
        android:defaultValue="true"/>

    <SwitchPreference
        android:icon="@drawable/ic_download"
        android:title="@string/use_system_downloader"
        android:key="systemDownloader"
        android:defaultValue="true"/>

    <Preference
        android:icon="@drawable/ic_global"
        android:title="@string/language"
        android:key="language"/>

    <Preference
        android:icon="@drawable/ic_logout"
        android:title="@string/logout"
        android:key="logout"/>
</PreferenceScreen>