<?xml version="1.0" encoding="utf-8"?>


<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.thirtydegreesray.openhub.ui.activity.ProfileActivity">
    <item
        android:id="@+id/action_follow"
        android:title="@string/follow"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_share"
        android:title="@string/share"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_open_in_browser"
        android:title="@string/open_in_browser"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_copy_url"
        android:title="@string/copy_url"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_bookmark"
        android:title="@string/bookmark"
        app:showAsAction="never"/>
</menu>